--- a/src/components/separator.astro
+++ b/src/components/separator.astro
@@ -6,6 +6,7 @@ type Props = {
   containerClass?: string;
   icon?: any;
   colored?: boolean;
+  external?: boolean;
 };
 
 const {
@@ -15,6 +16,7 @@ const {
   href,
   icon: Icon,
   colored = false,
+  external = false,
 } = Astro.props;
 
 const Anchor = href ? "a" : "div";
@@ -27,7 +29,7 @@ const Anchor = href ? "a" : "div";
     containerClass,
   ]}
 >
-  <Anchor href={href}>
+  <Anchor href={href} target={external ? "_blank" : "_self"}>
     <div
       class:list={[
         "separator flex justify-center items-center group",
