--- a/src/pages/[locale]/[about].astro
+++ b/src/pages/[locale]/[about].astro
@@ -1,14 +1,15 @@
 ---
-import PortaRapida from "@/assets/images/porta-rapida.png";
 import Container from "@/components/container.astro";
 import Footer from "@/components/footer.astro";
 import Header from "@/components/header.astro";
 import Hexagon from "@/components/hexagon.astro";
 import Separator from "@/components/separator.astro";
-import { $t, locales } from "@/i18n";
+import { $t, locales, resolvePropByLocale } from "@/i18n";
 import Layout from "@/layouts/Layout.astro";
-import { even } from "@/utils";
+import { even, generateWhatsappLink } from "@/utils";
 import { Image } from "astro:assets";
+import { getEntry } from "astro:content";
+import { marked } from "marked";
 import IcSharpWhatsapp from "~icons/ic/sharp-whatsapp";
 
 export function getStaticPaths() {
@@ -21,28 +22,8 @@ const page = "sobre";
 
 const { locale } = Astro.params;
 
-const dnas = [
-  {
-    image: PortaRapida,
-    text: "Tranquilidade",
-  },
-  {
-    image: PortaRapida,
-    text: "Visão sistêmica",
-  },
-  {
-    image: PortaRapida,
-    text: "Realista",
-  },
-  {
-    image: PortaRapida,
-    text: "Compromisso",
-  },
-  {
-    image: PortaRapida,
-    text: "Olhar consultivo",
-  },
-];
+const about = await getEntry("about", "index");
+const config = await getEntry("config", "index");
 ---
 
 <Layout colored title={$t("routes.about.title", locale)}>
@@ -55,8 +36,8 @@ const dnas = [
       >
         <Image
           class="w-full h-auto object-cover absolute"
-          src={PortaRapida}
-          alt="Porta Rápida"
+          src={about.data.titleBackground}
+          alt="Duspor: Portas industriais"
         />
       </div>
 
@@ -65,34 +46,28 @@ const dnas = [
       >
       </div>
 
-      <p
-        class="relative z-10 uppercase text-8xl max-w-[75%] [&_b]:text-white [&_b]:font-extrabold tracking-wide"
-      >
-        <b>Nossa história</b>
-      </p>
+      <div
+        class="relative z-10 uppercase text-8xl max-w-[75%] text-white font-extrabold tracking-wide"
+        set:html={marked(resolvePropByLocale(about.data, "title", locale))}
+      />
     </section>
 
-    <section class="text-white mt-12 text-justify leading-relaxed text-lg">
-      <p>
-        Somos uma empresa completa e especializada na montagem e manutenção de <b
-          >Portas Industriais</b
-        >. Nossa trajetória começou com a <b>Dinâmica Montagem Industrial</b> e,
-        com o objetivo de proporcionar excelência aos nossos clientes, evoluímos
-        para a <b>Duspor</b>. Concebemos e desencolvemos nossos produtos com
-        foco em proporcionar <b>segurança</b>, <b>eficiência</b> e <b
-          >qualidade</b
-        > para nossos clientes.
-      </p>
-    </section>
+    <section
+      class="text-white mt-12 text-justify leading-relaxed text-lg [&_strong]:text-black [&_strong]:font-bold"
+      set:html={marked(resolvePropByLocale(about.data, "description", locale))}
+    />
 
     <Separator colored />
 
     <section class="text-white">
-      <h3 class="text-center uppercase text-7xl font-bold">Nosso DNA</h3>
+      <h3
+        class="text-center uppercase text-7xl font-bold"
+        set:html={marked(resolvePropByLocale(about.data, "dna", locale))}
+      />
 
       <div class="relative h-64 mt-16">
         {
-          dnas.map((dna, index) => (
+          about.data.values.map((dna, index) => (
             <div
               class:list={[
                 "flex justify-center items-center absolute",
@@ -100,15 +75,19 @@ const dnas = [
               ]}
               style={{ right: `calc(50% - ${100 + (index - 2) * 190}px)` }}
             >
-              <Hexagon class="h-52 w-52" size="md">
+              <Hexagon class="h-52 w-52 grayscale" size="md">
                 <Image
-                  class="w-full h-auto object-cover"
+                  class={
+                    dna.image.height < dna.image.width
+                      ? "h-full w-auto"
+                      : "w-full h-auto"
+                  }
                   src={dna.image}
-                  alt={dna.text}
+                  alt={resolvePropByLocale(dna, "title", locale)}
                 />
               </Hexagon>
               <div class="text-xl w-4/5 uppercase font-semibold text-center">
-                {dna.text}
+                {resolvePropByLocale(dna, "title", locale)}
               </div>
             </div>
           ))
@@ -118,7 +97,11 @@ const dnas = [
 
     <Separator
       colored
-      href="#"
+      href={generateWhatsappLink(
+        config.data.whatsapp.number,
+        config.data.whatsapp.message,
+      )}
+      external
       icon={IcSharpWhatsapp}
       text={$t("home.contact", locale)}
     />
