--- a/src/pages/[locale]/index.astro
+++ b/src/pages/[locale]/index.astro
@@ -5,9 +5,12 @@ import Footer from "@/components/footer.astro";
 import Header from "@/components/header.astro";
 import Hexagon from "@/components/hexagon.astro";
 import Separator from "@/components/separator.astro";
-import { $t, locales, resolveLocaleURL } from "@/i18n";
+import { $t, locales, resolveLocaleURL, resolvePropByLocale } from "@/i18n";
 import Layout from "@/layouts/Layout.astro";
+import { generateWhatsappLink } from "@/utils";
 import { Image } from "astro:assets";
+import { getEntry } from "astro:content";
+import { marked } from "marked";
 import { match } from "ts-pattern";
 import IcSharpWhatsapp from "~icons/ic/sharp-whatsapp";
 import Logo from "~icons/local/logo";
@@ -19,6 +22,9 @@ export function getStaticPaths() {
 const { locale } = Astro.params;
 
 const images = Array.from({ length: 4 }, () => PortaRapida);
+
+const home = await getEntry("home", "index");
+const config = await getEntry("config", "index");
 
 const resolveStyle = (index: number) =>
   match(index)
@@ -39,8 +45,8 @@ const resolveStyle = (index: number) =>
       >
         <Image
           class="w-full h-auto object-cover absolute"
-          src={PortaRapida}
-          alt="Porta Rápida"
+          src={home.data.titleBackground}
+          alt="Duspor, portas industriais"
         />
       </div>
 
@@ -49,11 +55,10 @@ const resolveStyle = (index: number) =>
       >
       </div>
 
-      <p
-        class="relative z-10 uppercase text-7xl max-w-[75%] [&_b]:text-primary [&_b]:font-extrabold tracking-wide"
-      >
-        Crie espaços e <b>Construa possibilidades</b>
-      </p>
+      <div
+        class="relative z-10 uppercase text-7xl max-w-[75%] [&_strong]:text-primary [&_strong]:font-extrabold tracking-wide"
+        set:html={marked(resolvePropByLocale(home.data, "title", locale))}
+      />
     </div>
 
     <Separator
@@ -64,12 +69,12 @@ const resolveStyle = (index: number) =>
     <div class="grid grid-cols-2">
       <div class="relative">
         {
-          images.map((image, index) => (
+          home.data.descriptionBackgrounds.slice(0, 4).map((image, index) => (
             <Hexagon class="w-52 h-52 absolute" style={resolveStyle(index)}>
               <Image
                 class="w-full h-auto object-cover"
                 src={image}
-                alt="Porta Rápida"
+                alt={`Duspor, portas industriais ${index}`}
               />
             </Hexagon>
           ))
@@ -77,29 +82,35 @@ const resolveStyle = (index: number) =>
       </div>
 
       <div
-        class="uppercase text-right text-6xl [&_b]:text-primary [&_b]:font-extrabold tracking-wide py-12"
+        class="uppercase text-right text-6xl [&_strong]:text-primary [&_strong]:font-extrabold tracking-wide py-12"
       >
-        <p><b>Agilidade</b> na montagem e <b>facilidade</b> na operação</p>
+        <div
+          set:html={marked(
+            resolvePropByLocale(home.data, "description", locale),
+          )}
+        />
 
         <div class="float-right mt-6">
           <span class="sr-only">Duspor logo</span>
           <Logo class="w-[420px] h-20 text-primary" />
-          <!-- <Image class="w-10/12 h-auto mt-6 float-right" src={Logo} alt="Logo" /> -->
         </div>
       </div>
     </div>
 
     <Separator
-      href=""
+      href={generateWhatsappLink(
+        config.data.whatsapp.number,
+        config.data.whatsapp.message,
+      )}
+      external
       icon={IcSharpWhatsapp}
       text={$t("home.contact", locale)}
     />
 
     <div
-      class="uppercase text-center text-7xl [&_b]:text-primary [&_b]:font-extrabold tracking-wide"
-    >
-      <p>Conheça alguns de <b>nossso clientes</b></p>
-    </div>
+      class="uppercase text-center text-7xl [&_strong]:text-primary [&_strong]:font-extrabold tracking-wide"
+      set:html={marked(resolvePropByLocale(home.data, "clients", locale))}
+    />
   </Container>
 
   <Footer />
