--- a/src/components/hexagon.astro
+++ b/src/components/hexagon.astro
@@ -2,7 +2,7 @@
 type Props = {
   class?: string;
   style?: Record<string, string>;
-  size?: "xs" | "sm" | "md" | "lg" | "xl" | "2xl" | "3xl";
+  size?: "xxs" | "xs" | "sm" | "md" | "lg" | "xl" | "2xl" | "3xl";
 };
 
 const { class: _class, style, size = "md" } = Astro.props as Props;
@@ -28,6 +28,12 @@ const { class: _class, style, size = "md" } = Astro.props as Props;
     mask-size: var(--mask-size);
     width: var(--mask-size);
     height: var(--mask-size);
+  }
+
+  .hexagon-xxs {
+    --mask-size: calc(
+      var(--default-mask-size) - 4 * var(--mask-size-variation)
+    );
   }
 
   .hexagon-xs {
