--- a/src/components/separator.astro
+++ b/src/components/separator.astro
@@ -24,7 +24,7 @@ const Anchor = href ? "a" : "div";
 
 <div
   class:list={[
-    "my-20",
+    "my-12 md:my-20",
     colored ? "text-gray-400" : "text-primary",
     containerClass,
   ]}
@@ -41,11 +41,11 @@ const Anchor = href ? "a" : "div";
         text && (
           <div
             class:list={[
-              "flex-shrink-0 flex items-center px-6 py-3  group-hover:bg-black text-white uppercase font-bold text-3xl",
+              "flex-shrink-0 flex items-center px-4 md:px-6 py-2 md:py-3  group-hover:bg-black text-white uppercase font-bold md:text-3xl",
               colored ? "bg-gray-400" : "bg-primary",
             ]}
           >
-            {Icon && <Icon class="w-10 h-10 mr-2" />}
+            {Icon && <Icon class="w-6 md:w-10 h-6 md:h-10 mr-2" />}
             {text}
           </div>
         )
@@ -59,8 +59,15 @@ const Anchor = href ? "a" : "div";
   .separator::after {
     content: "";
     display: block;
-    height: 0.15rem;
+    height: 0.1rem;
     flex-grow: 1;
+  }
+
+  @media screen and (min-width: 768px) {
+    .separator::before,
+    .separator::after {
+      height: 0.15rem;
+    }
   }
 
   .separator::before {
