--- a/src/pages/[locale]/[budget].astro
+++ b/src/pages/[locale]/[budget].astro
@@ -60,23 +60,25 @@ const form = [
 <Layout title={$t("routes.budget.title", locale)}>
   <Header locale={locale} page={page} />
 
-  <Container class="my-28">
+  <Container class="my-12 md:my-28 p-1">
     <div class="relative flex flex-col items-center justify-center">
-      <LogoMin class="h-96 w-96 text-gray-400/20 absolute z-0" />
+      <LogoMin
+        class="h-44 md:h-96 w-44 md:w-96 text-gray-400/20 absolute z-0"
+      />
       <h1
-        class="relative z-10 text-8xl text-black [&_b]:text-primary uppercase text-center"
+        class="relative z-10 text-4xl md:text-8xl text-black [&_b]:text-primary uppercase text-center"
       >
         {$t("budget.title", locale)}
         <br /><b>{$t("budget.name", locale)}</b>
       </h1>
 
-      <p class="relative z-10 text-center text-2xl text-black mt-8">
+      <p class="relative z-10 text-center md:text-2xl text-black mt-2 md:mt-8">
         {$t("budget.subtitle", locale)}
       </p>
     </div>
 
     <form
-      class="flex flex-col relative text-xs md:text-base mt-20"
+      class="flex flex-col relative text-xs md:text-base mt-12 md:mt-20"
       name="Orçamento"
       action="/sucesso"
       method="POST"
