--- a/src/pages/[locale]/[contact].astro
+++ b/src/pages/[locale]/[contact].astro
@@ -40,22 +40,22 @@ const contacts = [
 <Layout colored title={$t("routes.contact.title", locale)}>
   <Header colored locale={locale} page={page} />
 
-  <Container class="h-[calc(100vh-6rem)] flex items-center justify-center">
+  <Container class="h-[calc(100vh-6rem)] flex items-center justify-center p-1">
     <section class="flex items-center">
-      <LogoMin class="h-96 w-96 text-gray-400 flex-shrink-0" />
+      <LogoMin class="h-24 md:h-96 w-24 md:w-96 text-gray-400 flex-shrink-0" />
       <div class="-ml-4">
-        <h1 class="uppercase font-bold text-8xl text-white">
+        <h1 class="uppercase font-bold text-4xl md:text-8xl text-white">
           {$t("contact.talkToUs", locale)}
         </h1>
 
-        <div class="space-y-3 mt-8 ml-8">
+        <div class="space-y-3 mt-2 md:mt-8 ml-6 md:ml-8">
           {
             contacts.map(({ Icon, text }) => (
               <div class="flex items-center">
                 <div class="rounded-full p-[0.4rem] bg-gray-400">
-                  <Icon class="h-6 w-6 text-white" />
+                  <Icon class="h-4 md:h-6 w-4 md:w-6 text-white" />
                 </div>
-                <span class="ml-4 text-white text-4xl">{text}</span>
+                <span class="ml-2 md:ml-4 text-white md:text-4xl">{text}</span>
               </div>
             ))
           }
