--- a/src/pages/[locale]/[products]/index.astro
+++ b/src/pages/[locale]/[products]/index.astro
@@ -30,18 +30,22 @@ const config = await getEntry("config", "index");
 <Layout title={$t("routes.products.title", locale)}>
   <Header locale={locale} page={page} />
 
-  <Container class="my-28">
+  <Container class="my-16 md:my-28 p-1">
     <section class="flex items-center">
-      <LogoMin class="h-96 w-96 text-gray-400 flex-shrink-0" />
+      <LogoMin
+        class="h-28 sm:h-44 md:h-64 lg:h-96 w-28 sm:w-44 md:w-64 lg:w-96 text-gray-400 flex-shrink-0"
+      />
       <div class="-ml-2">
-        <h1 class="uppercase font-bold text-8xl text-primary text-border">
+        <h1
+          class="uppercase font-bold text-4xl md:text-8xl text-primary text-border"
+        >
           {$t("products.title", locale)}
         </h1>
-        <Logo class="w-[300px] h-20 text-primary" />
+        <Logo class="w-[150px] md:w-[300px] h-10 md:h-20 text-primary" />
       </div>
     </section>
 
-    <section class="mb-28 space-y-12 divide-y-2 divide-y-gray-400">
+    <section class="mb-28 space-y-8 md:space-y-12 divide-y-2 divide-y-gray-400">
       {
         products.map((product, index) => (
           <a
@@ -49,13 +53,13 @@ const config = await getEntry("config", "index");
               product.slug
             }`}
             class:list={[
-              "flex items-center pt-12 group",
+              "flex items-center pt-8 md:pt-12 group",
               even(index) ? "flex-row" : "flex-row-reverse",
             ]}
           >
             <h2
               class:list={[
-                "w-1/3 uppercase text-primary text-4xl font-bold group-hover:text-black transition-colors duration-150 group-hover:duration-150",
+                "md:w-1/3 uppercase text-primary text-lg sm:text-2xl md:text-4xl font-bold group-hover:text-black transition-colors duration-150 group-hover:duration-150",
                 !even(index) && "text-right",
               ]}
             >
@@ -70,8 +74,45 @@ const config = await getEntry("config", "index");
                   <Hexagon
                     size="xl"
                     class:list={[
+                      "hidden md:flex",
                       index > 0 &&
                         "-ml-12 group-hover:translate-x-6 transition-all duration-300",
+                    ]}
+                  >
+                    <Image
+                      class={
+                        image.height < image.width
+                          ? "h-full w-auto"
+                          : "w-full h-auto"
+                      }
+                      src={image}
+                      alt={product.data.title}
+                    />
+                  </Hexagon>
+                  <Hexagon
+                    size="xs"
+                    class:list={[
+                      "hidden sm:flex md:hidden",
+                      index > 0 &&
+                        "-ml-8 group-hover:translate-x-4 transition-all duration-300",
+                    ]}
+                  >
+                    <Image
+                      class={
+                        image.height < image.width
+                          ? "h-full w-auto"
+                          : "w-full h-auto"
+                      }
+                      src={image}
+                      alt={product.data.title}
+                    />
+                  </Hexagon>
+                  <Hexagon
+                    size="xxs"
+                    class:list={[
+                      "flex sm:hidden",
+                      index > 0 &&
+                        "-ml-4 group-hover:translate-x-2 transition-all duration-300",
                     ]}
                   >
                     <Image
