--- a/src/pages/[locale]/index.astro
+++ b/src/pages/[locale]/index.astro
@@ -139,7 +139,7 @@ const resolveMobileStyle = (index: number) =>
     <GalleryFade class="my-4 md:my-12">
       {
         home.data.images.map((image) => (
-          <div class="flex items-center justify-center py-6">
+          <div class="flex items-center justify-center py-16 md:py-6">
             <Image
               class="w-28 md:w-60 h-auto"
               src={image}
